Implement drop object sub-column